added json file to handle different android devices